--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Cleaning and Processing: "
+    "Data Cleaning and Preprocessing: \n",
+    "add length filtering compared to closed road"
    ]
   },
   {
